# Tetrust

./: .gitignore  Cargo.toml
config/: inputs.json
src/: game_manager.rs  gameboard.rs  graphics.rs  main.rs  piece.rs  piece_factory.rs  piece_provider.rs  setup.rs  traits.rs
