[package]
name = "Tetrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.35.0"

# generate seed
rand = "0.8.5"
rand_chacha = "0.3.1"

# iterate over enumeration values
strum = "0.24.1"
strum_macros = "0.24.3"

# Ascii visualizer
colored = "2.0.0"

# console inputs 
console = "0.15.5"

# config management
config = "0.14.0"

lazy_static = "1.4.0"



